--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dotenv": "^17.2.1",
     "openai": "^5.11.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
